--- a/statments.html
+++ b/statments.html
@@ -8,61 +8,53 @@
   <title>Learning C PrintAndScan</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
 
-  <!-- CSS -->
+ <!-- Font Awesome -->
+ <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
-  <!-- Bootstrap Scripts -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+ <!-- CSS -->
 
+ <!-- Bootstrap Scripts -->
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+   integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ <link rel="stylesheet" href="css/styles.css">
+
+ <!-- Java Script -->
+ <script src="js/code.js"></script>
 
 </head>
 
 <body class="bg-twoAndHalf">
 
-  <div class="container">
-    <!--Side bar-->
-    <nav role="navigation">
-      <div id="menuToggle">
-        <input type="checkbox" />
-        <span></span>
-        <span></span>
-        <span></span>
-        <ul id="menu">
-          <a href="index.html" class="w3-bar-item w3-button">מי אנחנו?</a>
-          <a href="firstProgram.html" class="w3-bar-item w3-button">התוכנית הראשונה</a>
-          <a href="variables.html" class="w3-bar-item w3-button">משתנים</a>
-          <a href="printAndScan.html" class="w3-bar-item w3-button">קלט ופלט</a>
-          <a href="mathOperator.html" class="w3-bar-item w3-button">אופרטורים חשבוניים</a>
-          <a href="statments.html" class="w3-bar-item w3-button">משפטי בקרה</a>
-          <a href="oneDimLoops.html" class="w3-bar-item w3-button">לולאות</a>
-          <a href="twoDimLoops.html" class="w3-bar-item w3-button">לולאות דו מימדיות</a>
-          <a href="casting.html" class="w3-bar-item w3-button">קסטינג </a>
-          <a href="sizeOf.html" class="w3-bar-item w3-button">סייז אוף </a>
-          <a href="typeDef.html" class="w3-bar-item w3-button">טייפ דפ</a>
-          <a href="functions.html" class="w3-bar-item w3-button">פונקציות</a>
-          <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות</a>
-          <a href="pointers.html" class="w3-bar-item w3-button">מצביעים</a>
-          <a href="doublePointer.html" class="w3-bar-item w3-button">מצביע כפול</a>
-          <a href="arrays.html" class="w3-bar-item w3-button">מערכים</a>
-          <a href="dinArrays.html" class="w3-bar-item w3-button">מערכים דינאמיים</a>
-          <a href="string.html" class="w3-bar-item w3-button">מחרוזות</a>
-          <a href="binSearch.html" class="w3-bar-item w3-button">חיפוש בינארי</a>
-          <a href="twoDimArrays.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
-          <a href="bubbleSort.html" class="w3-bar-item w3-button">מיון בועות</a>
-          <a href="selectionSort.html" class="w3-bar-item w3-button">מיון בחירה</a>
-          <a href="insertionSort.html" class="w3-bar-item w3-button">מיון הכנסה</a>
-          <a href="quickSort.html" class="w3-bar-item w3-button">מיון מהיר</a>
-          <a href="mergeSort.html" class="w3-bar-item w3-button">מיון מיזוג</a>
-        </ul>
-      </div>
-    </nav>
-    <!--End of Side bar-->
-
+  <span class="sidenav-icon" onclick="openNav()"><i class="sidenav-icon fas fa-bars"></i></span>
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="index.html">מי אנחנו?</a>
+    <a href="firstProgram.html">התוכנית הראשונה</a>
+    <a href="variables.html">משתנים</a>
+    <a href="printAndScan.html">קלט ופלט</a>
+    <a href="mathOperator.html">אופרטורים חשבוניים</a>
+    <a href="statments.html">משפטי בקרה</a>
+    <a href="oneDimLoops.html">לולאות</a>
+    <a href="twoDimLoops.html">לולאות דו מימדיות</a>
+    <a href="casting.html">casting </a>
+    <a href="sizeOf.html">sizeof</a>
+    <a href="typeDef.html">typedef</a>
+    <a href="functions.html">פונקציות</a>
+    <a href="recursion.html">רקורסיות</a>
+    <a href="pointers.html">מצביעים</a>
+    <a href="doublePointer.html">מצביע כפול</a>
+    <a href="arrays.html">מערכים</a>
+    <a href="dinArrays.html">מערכים דינאמיים</a>
+    <a href="string.html">מחרוזות</a>
+    <a href="binSearch.html">חיפוש בינארי</a>
+    <a href="twoDimArrays.html">מערכים דו ממדיים</a>
+    <a href="bubbleSort.html">מיון בועות</a>
+    <a href="selectionSort.html">מיון בחירה</a>
+    <a href="insertionSort.html">מיון הכנסה</a>
+    <a href="quickSort.html">מיון מהיר</a>
+    <a href="mergeSort.html">מיון מיזוג</a>
   </div>
-
   <h1 class="head-left">Learning C</h1>
   <h1 class="head-right">משפטי בקרה</h1>
 
@@ -103,7 +95,7 @@
               <br>
               משפטים בשפת סי שניתן להשתמש בהן לצורך בדיקת בקרה:
               <br>
-              if() - פעולה שבודקת האם מה שבתוך הסוגריים מתקיים - אם כן אנחנו נכנסים לתוך הקוד שימצא בתוך סוגריים
+              <span dir="ltr">if()</span> - פעולה שבודקת האם מה שבתוך הסוגריים מתקיים - אם כן אנחנו נכנסים לתוך הקוד שימצא בתוך סוגריים
               מסולסלות.
               <br>
               <br>
@@ -111,9 +103,20 @@
               אנחנו נכנסים לתוך קטע הקוד שימצא בתוך סוגרים מסולסלות.
               <br>
               <br>
-              else if() - זוהי בדיקה שעובדת לאחר שיש if לפניה. הבדיקה תיעשה אם ורק אם הif הקודם שלנו לא התקיים.
+              <span dir="ltr">else if()</span> - זוהי בדיקה שעובדת לאחר שיש if לפניה. הבדיקה תיעשה אם ורק אם הif הקודם שלנו לא התקיים.
               <br>
               <br>
+              לדוגמה:
+              <br>
+              printf = הפקודה שאנו מבצעים
+              <br>
+              "%d" = סוג המשתנה שאותו אנו מדפיסים (במקרה שלנו int)
+              <br>
+              x = שם המשתנה שאותו אנו מדפיסים
+              <br>
+              אפשר לחשוב שבאמצעות הקוד שלנו אנחנו בעצם אומרים – תדפיס את הערך של int בשם x.
+              <br>
+
 
 
         </p>
@@ -131,26 +134,15 @@
     <div class="row">
 
       <div class="col-md-6">
-
-
         <p>
-          לדוגמה:
+ 
+          נראה דוגמה במילים ולאחר מכן נפתור אותה בקוד: <br>
+          נניח שאנחנו בודקים האם גילו של אדם הוא מספיק מבוגר כדי לעלות על מתקן בלונה פארק ונניח שגילו המינימלי של אדם שעולה על המתקן צריך להיות 15. <br>
+          ז"א - כדי שאדם יוכל לעלות על המתקן אנו נצטרך לוודא שהוא לפחות בן 15. 
           <br>
-          printf = הפקודה שאנו מבצעים
-          <br>
-          "%d" = סוג המשתנה שאותו אנו מדפיסים (במקרה שלנו אינט)
-          <br>
-          x = שם המשתנה שאותו אנו מדפיסים
-          <br>
-          אפשר לחשוב שבאמצעות הקוד שלנו אנחנו בעצם אומרים – תדפיס את הערך של int בשם x.
-          <br>
-
+          פתרון בקוד:
         </p>
-
       </div>
-
-
-
       <div class="col-md-6">
 
         <figure class="code">
